@@ -9,6 +9,20 @@ The Islandora repo, "digital", is deployed on a Dell PowerEdge 715 rack mount se
 * 64G RAM
 * 4TB RAID
 
+A similar test server has the same versions of software.
+
+There is also a "ingest client" server that was installed using the scripts
+from these parts of the vagrant install scripts to allow ingests to the main fedora.
+
+* Ubuntu
+* Drupal
+* Djatoka ( for kdu_compress)
+* ImageMagick
+* Tesseract
+* FFMpeg and lame
+* FITS
+
+
 ## Tomcat webapps:
 
 * Adore-Djatoka
@@ -20,16 +34,16 @@ The Islandora repo, "digital", is deployed on a Dell PowerEdge 715 rack mount se
 
 * Adore-Djatoka: 1.1
 * Apache: 2.4.6-31
-* Drupal: 7.35
+* Drupal: 7.39
 * ffmpeg: git-2015-01-27-3c831fb
 * FITS: 0.8.5
-* Islandora: 7.x-1.4
+* Islandora: HEAD
 * Java: 1.7 (Oracle)
 * jQuery: 
 * jQuery UI: 
 * Fedora: 3.7.1
 * Fedora GSearch: 2.7
-* MariaDB: 5.5.41
+* MariaDB: 5.5.44
 * Solr: 4.2.0
 * Tesseract: 3.02.02
 * Tomcat: 6.0.35
@@ -39,7 +53,9 @@ The Islandora repo, "digital", is deployed on a Dell PowerEdge 715 rack mount se
 
 * ffmpeg:  --enable-gpl --enable-nonfree --enable-libmp3lame --enable-libvorbis --enable-libvpx --enable-libx264
 * JAVA_OPTS= -server -Xmx4096m -Xms4096m
- -XX:MaxPermSize=512m
+ -XX:MaxPermSize=1024m
+ -XX:+UseParNewGC
+ -XX:+UseConcMarkSweepGC
  -XX:+CMSClassUnloadingEnabled
  -Djavax.net.ssl.trustStore=/vhosts/fedora/server/truststore
  -Djavax.net.ssl.trustStorePassword=tomcat
@@ -49,7 +65,7 @@ The Islandora repo, "digital", is deployed on a Dell PowerEdge 715 rack mount se
  -DLD_LIBRARY_PATH=/opt/adore-djatoka/lib/Linux-x86-64
  
 * PHP memory limit: 4096M
-* Tesseract 3.03 : leptonica-1.71  libjpeg 6b : libpng 1.5.13 : libtiff 4.0.3 : zlib 1.2.7 : libwebp 0.3.0
+* Tesseract 3.02.02 : leptonica-1.71  libjpeg 6b : libpng 1.5.13 : libtiff 4.0.3 : zlib 1.2.7 : libwebp 0.3.0
 
 ## Fedora XACML policies:
 ```
@@ -78,6 +94,8 @@ repository-policies
 * collection_sort
 * colorbox
 * ctools
+* devel
+* enitity
 * imagemagick
 * islandora
 * islandora_batch
@@ -87,7 +105,6 @@ repository-policies
 * islandora_checksum
 * islandora_checksum_checker
 * islandora_collection_search
-* islandora_collection_sort
 * islandora_fits
 * islandora_importer
 * islandora_internet_archive_bookreader
@@ -97,10 +114,10 @@ repository-policies
 * islandora_openseadragon
 * islandora_paged_content
 * islandora_paged_tei_seadragon
+* islandora_piwik
 * islandora_pdfjs
 * islandora_premis
 * islandora_rest
-* islandora_solr_facet_pages
 * islandora_solr_metadata
 * islandora_solr_search
 * islandora_solr_views
@@ -118,9 +135,11 @@ repository-policies
 * islandora_xacml_editor
 * islandora_xml_forms
 * libraries
+* nagios
 * objective_forms
 * php_lib
 * piwik
+* rules
 * simple_ldap
 * views
 
@@ -132,10 +151,10 @@ repository-policies
 * JAIL
 * jquery
 * jquery.cycle
-* jstree 3.1.1
+* jstree
 * jwplayer
-* openseadragon 1.1.1
-* pdfjs 0.8.0
+* openseadragon
+* pdfjs
 * superfish
 * tuque
 * utk
